; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/deparser/extr_qualify.c_QualifyAlterOwnerStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/deparser/extr_qualify.c_QualifyAlterOwnerStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @QualifyAlterOwnerStmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @QualifyAlterOwnerStmt(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %12 [
    i32 128, label %6
    i32 130, label %9
    i32 129, label %9
  ]

6:                                                ; preds = %1
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = call i32 @QualifyAlterTypeOwnerStmt(%struct.TYPE_5__* %7)
  br label %13

9:                                                ; preds = %1, %1
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = call i32 @QualifyAlterFunctionOwnerStmt(%struct.TYPE_5__* %10)
  br label %12

12:                                               ; preds = %1, %9
  br label %13

13:                                               ; preds = %12, %6
  ret void
}

declare dso_local i32 @QualifyAlterTypeOwnerStmt(%struct.TYPE_5__*) #1

declare dso_local i32 @QualifyAlterFunctionOwnerStmt(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
